--- a/css/app.css
+++ b/css/app.css
@@ -175,5 +175,20 @@ label {
     border-color: black;
 }
 .cursor-pointer{
-cursor: pointer;
+    cursor: pointer;
+}
+.product-table{
+   table, th , td {
+      border: 1px solid grey;
+      border-collapse: collapse;
+      padding: 5px;
+   }
+   
+   table tr:nth-child(odd) {
+      background-color: #f2f2f2;
+   }
+
+   table tr:nth-child(even) {
+      background-color: #ffffff;
+   }
 }
